@@ -1,3 +1,9 @@
+2011-03-01  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclBasic.c (TclNREvalObjv): missing a variable
+	declaration in commented out non-optimised code, left for ref in
+	checkin [b97b771b6d]
+
 2011-03-03  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclResult.c (Tcl_AppendResultVA):	Use the directive
@@ -7,8 +13,8 @@
 
 2011-03-01  Miguel Sofer  <msofer@users.sf.net>
 
-	* generic/tclCompCmdsSZ.c (TclCompileThrowCmd)
-	(TclCompileUnsetCmd): fix leaks
+	* generic/tclCompCmdsSZ.c (TclCompileThrowCmd, TclCompileUnsetCmd): 
+	fix leaks
 	
 	* generic/tclBasic.c:       This is [Patch 3168398],
 	* generic/tclCompCmdsSZ.c:  Joe Mistachkin's optimisation
